styles, shadcn ui

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,9 @@
     "noUncheckedSideEffectImports": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   }
 }
