weatherCard component created, eslint and prittier setted up

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tanstack/router-plugin": "^1.114.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "globals": "^16.0.0",
     "lucide-react": "^0.485.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@tanstack/eslint-config": "^0.1.0",
     "@tanstack/eslint-plugin-query": "^5.68.0",
+    "@tanstack/eslint-plugin-router": "^1.114.29",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^22.13.14",
@@ -39,8 +41,12 @@
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "react-scan": "^0.3.3",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
